# Sentinel

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  HOW_TO_INSTALL.md  LICENSE  README.md  SECURITY.md  Sentinelinstaller.rs  TAGS.md
Code/Backend/: Cryptography.rs  Roles.rs
Code/Frontend/: app.rs
Code/Middlend/: Checker.rs  Extensions.rs  Loader.rs  Runtime.rs  Security.rs
src/Backend/: Auth.rs  DataHandler.rs  TempEng.rs  Work.rs  mod.rs
src/Frontend/: GUI.rs  Scripting.rs  events.rs  mod.rs  window.rs
src/Middlend/: Identity.rs  Middleware.rs  NeededStruct.rs  Validator.rs
